--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,10 @@
     <string name="age_txt">Age</string>
     <string name="current_weight_txt">Current weight</string>
     <string name="target_weight_txt">Target weight</string>
+    <string name="save_btn">save</string>
 
     <string-array name="gender_array">
+        <item>Gender</item>
         <item>Male</item>
         <item>Female</item>
         <item>Other</item>
