--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,6 @@
     <string name="save_btn">save</string>
 
     <string-array name="gender_array">
-        <item>Gender</item>
         <item>Male</item>
         <item>Female</item>
         <item>Other</item>
@@ -30,8 +29,28 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Logout</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="gender_txt">Gender</string>
+    <string name="help_txt">Help</string>
+    <string name="settings_txt">Settings</string>
+
+    <string name="date">datePicker</string>
+    <string name="time">timePicker</string>
+    <string name="date_txt">pick a Date</string>
+    <string name="pick_time_txt">Pick Time</string>
+    <string name="no_of_sets_txt">No of sets</string>
+
+    <string-array name="exercise_cat">
+        <item>Exercise type/name</item>
+        <item>Horizontal Seated Leg Press</item>
+        <item>Lat Pull-Down</item>
+        <item>Cable Biceps Bar</item>
+        <item>Cable Triceps Bar (or Triceps Pushdown)</item>
+        <item>Chest Press</item>
+        <item>Hanging Leg Raise</item>
+        <item>Cardio: Rowing Machine</item>
+    </string-array>
 </resources>
